[project]
name = "deeplynx-istari-modules"
version = "0.1.0"
description = "Istari integration modules for DeepLynx digital twin data warehouse"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "responses>=0.24",
]
